[package]
name = "monitor"
description = "Monitor synchronization construct"
version = "0.1.0"
authors = [ "Kirill Khazan <kirillkh@gmail.com>" ]

homepage = "https://github.com/kirillkh/monitor_rs"
repository = "https://github.com/kirillkh/monitor_rs"

readme = "readme.md"
license-file = "legal/mit.md"

keywords = [ "monitor", "synchronization" ]
